# -DjangoBotHub

./: README.md
backend/: .env.sample  manage.py  pyproject.toml  requirements.txt
backend/Bothub/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/api/: migrations - Shortcut.lnk  tasks.py  urls.py  views.py
backend/api/data/: home.json
backend/telegramBot/: urls.py  views.py
forntend/: package.json
forntend/src/: App.tsx
forntend/src/pages/: Home.tsx  Login.tsx  Profile.tsx  Signup.tsx
